force-app/main/default/objects/DCRM_Customer_Management_Non_KYC_Fields__mdt/DCRM_Customer_Management_Non_KYC_Fields__mdt.object-meta.xml
<CustomObject>
    <description>Custom metadata to store the Non-KYC fields.</description>
    <label>DCRM Customer Management Non KYC Fields</label>
    <pluralLabel>DCRM Customer Management Non KYC Fields</pluralLabel>
</CustomObject>