force-app/main/default/objects/DCRM_Customer_Management_Non_KYC_Fields__mdt/fields/Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Status__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Status of the Customer record (Can hold multiple value separated by &apos;;&apos;).</description>
    <label>Customer Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>