force-app/main/default/objects/DCRM_Customer_Management_Non_KYC_Fields__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>API name of the object.</description>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>