force-app/main/default/objects/DCRM_Customer_Management_Non_KYC_Fields__mdt/fields/Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Profile_Name__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Name of the profile.</description>
    <label>Profile Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>